--- a/src/moodle_toml/templates/coderunner.xml
+++ b/src/moodle_toml/templates/coderunner.xml
@@ -33,7 +33,7 @@
     <globalextra></globalextra>
     <useace></useace>
     <resultcolumns></resultcolumns>
-    <template></template>
+    <template>{% if template is not none %}<![CDATA[{{ template }}]]>{% endif %}</template>
     <iscombinatortemplate></iscombinatortemplate>
     <allowmultiplestdins></allowmultiplestdins>
     <validateonsave>1</validateonsave>
