--- a/src/moodle_toml/templates/quiz.xml
+++ b/src/moodle_toml/templates/quiz.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <quiz>
     {% for elt in data %}
-    {{ elt }}
+    {{ elt|safe }}
     {% endfor %}
 </quiz>
